listings/ch03-common-programming-concepts/no-listing-05-mut-cant-change-types/output.txt
$ cargo run
   Compiling zmienne v0.1.0 (file:///projects/zmienne)
error[E0308]: mismatched types
 --> src/main.rs:3:14
  |
3 |     spaces = spaces.len();
  |              ^^^^^^^^^^^^ expected `&str`, found `usize`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
<<<<<<< HEAD
error: could not compile `zmienne`.
=======
error: could not compile `variables`
>>>>>>> english/master

To learn more, run the command again with --verbose.
